force-app/main/default/objects/PlanExecution__c/PlanExecution__c.object-meta.xml
<CustomObject>
    <description>Tracks each individual execution of a Plan. Shows as a related list on the parent Plan record to provide a complete execution history.</description>
    <label>Plan Execution</label>
    <nameField>
        <displayFormat>EXC-{0000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>