force-app/main/default/objects/PlanExecution__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>The Salesforce CronTrigger ID of the scheduled Apex job associated with this execution.</description>
    <inlineHelpText>Salesforce scheduled job ID for this execution.</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>