force-app/main/default/objects/PlanExecution__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>The parent plan this execution belongs to.</description>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plan Executions</relationshipLabel>
    <relationshipName>PlanExecutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>