force-app/main/default/objects/PlanExecution__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>For completed executions: the agent response or error message. For scheduled executions: JSON with the expected execution time, e.g. {&quot;scheduledAt&quot;:&quot;2026-03-02T09:00:00Z&quot;}.</description>
    <inlineHelpText>Agent response after execution, or scheduled time JSON before execution.</inlineHelpText>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>