force-app/main/default/objects/PlanExecution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current state of this execution. Scheduled means the job is waiting to run. Success means the agent completed the task. Failed means an error occurred.</description>
    <inlineHelpText>Scheduled = waiting to run. Success = completed. Failed = error occurred.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>